applied a fix to transitions not scaling properly in deployment, fixed z-index issues, and further tuned responsiveness on smaller devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,39 +26,41 @@ textarea {
   font-family: 'Helvetica Neue'
 }
 
-.loader-active {
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: 10em;
-  height: 10em;
-  animation: fadeOut .5s 1s;
-  animation-fill-mode: forwards;
 
-  &::before {
-    content: 'Ethan';
+.loader-wrapper {
+  display: flex;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  z-index: -10;
+  .loader-active {
+    display: block;
     position: absolute;
-    text-align: center;
-    height: 100%;
-    bottom: 100px;
-    right: 45px;
-    margin: 0 auto;
-    font-size: 30px;
-    color: white;
-  }
-  &::after {
-    content: 'Amato';
-    position: absolute;
-    text-align: center;
-    // height: 100%;
-    top: 100px;
-    right: 45px;
-    margin: 0 auto;
-    font-size: 30px;
-    color: white;
+    opacity: 1;
+    animation: fadeOut .5s 1s;
+    animation-fill-mode: forwards;
+    
+    &::before {
+      content: 'Ethan';
+      position: absolute;
+      right: -45px;
+      height: 100%;
+      bottom: 100px;
+      margin: 0 auto;
+      font-size: 30px;
+      color: white;
+    }
+    &::after {
+      content: 'Amato';
+      position: absolute;
+      right: -45px;
+      top: 80px;
+      margin: 0 auto;
+      font-size: 30px;
+      color: white;
+    }
   }
 }
